add suario super admin, suario tenant, rotas de login protegidos funcionando perfeito

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,7 @@ MP_ACCESS_TOKEN="TEST-1234567890123456-123456-abcdef1234567890abcdef1234567890-1
 
 # URL do banco de dados PostgreSQL
 DATABASE_URL="postgresql://postgres:35182982@localhost:5432/escolinha_futebol?schema=public"
+
+SUPERADMIN_EMAIL=superadmin@escolinha.com
+SUPERADMIN_PASSWORD=35182982
+SUPERADMIN_NAME=Super Admin
